--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-MONGODB_PASSWORD="YOURKEY"
-SECRET_KEY="YOURSECRET"
+MONGODB = mongodb+srv://vedantdalvi59:vedantdalvi59@mongodb.r8rlscx.mongodb.net/movieDB
